atualizacoes de versao

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,7 +33,18 @@
                 </div>
             </form>
         </div>
-    </div>
-</body>
+
+        <div class="contact">
+            <div class="whats">
+                <img width="25" height="25" src="https://img.icons8.com/fluency/48/whatsapp.png" alt="user">
+                <a href="https://wa.me/5551993726122" target="_blank">Whatsapp</a>
+            </div> <br>
+
+            <div class="insta">
+                <img width="25" height="25" src="https://img.icons8.com/fluency/48/instagram-new.png" alt="user">
+                <a href="https://www.instagram.com/autotestemecanica" target="_blank">instagram</a>
+            </div>
+
+        </div>
 
 </html>
